--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -8,40 +8,62 @@
   font-size: 16px;
   transition: all 0.25s ease;
   text-align: center;
+
+  /* Кнопка с закруглением (например, вкладки Login/Register) */
   &.rounded {
-    border-radius: 16px;
-  }
-
-  &.btn--primary {
-    /* Кнопка Submit */
-    background: rgba(212, 175, 55, 0.25);
-    color: #fff;
-    border: 1px solid rgba(212, 175, 55, 0.7);
-
-    &:hover {
-      background: rgba(231, 198, 91, 0.45);
-      color: #000;
-      transform: translateY(-1px);
-      box-shadow: 0 3px 14px rgba(218, 187, 83, 0.45);
-    }
-  }
-
-  &.btn--secondary {
-    /* Вкладки Login / Register */
+    width: 100%;
     background: rgba(40, 35, 30, 0.6);
     color: #fbe8a6;
-    border: 1px solid rgba(227, 209, 151, 0.5);
-    font-weight: 600;
+    padding: 10px 16px;
+    font-size: 1rem;
+    border-radius: 16px;
+
+    box-shadow: 0 1px 3px rgba(212, 175, 55, 0.5);
     transition: all 0.3s ease;
 
     &.active {
-      background: linear-gradient(145deg, #fdebb2, #f4d27b);
+      background: linear-gradient(155deg, #494330, #b0934a);
       color: #1c1c1c;
       box-shadow: inset 0 0 8px rgba(212, 175, 55, 0.5);
     }
 
     &:hover {
-      background: rgba(255, 235, 150, 0.2);
+      background: rgba(212, 175, 55, 0.2);
+      color: #fff;
+    }
+  }
+
+  /* Основная кнопка Submit */
+  &.btn--primary {
+    background: linear-gradient(155deg, #2b2b2b, #3b321c);
+    color: #fbe8a6;
+    border: 1px solid rgba(212, 175, 55, 0.5);
+    box-shadow: 0 3px 8px rgba(212, 175, 55, 0.5);
+
+    &:hover {
+      background: linear-gradient(145deg, #fdebb2, #f4d27b);
+      color: #1c1c1c;
+      transform: translateY(-1px);
+      box-shadow: 0 4px 12px rgba(212, 175, 55, 0.6);
+    }
+  }
+
+  /* Вкладки Login / Register */
+  &.btn--secondary {
+    background: rgba(40, 35, 30, 0.6);
+    color: #fbe8a6;
+    border: 1px solid rgba(212, 175, 55, 0.4);
+    font-weight: 600;
+    transition: all 0.3s ease;
+
+    &.active {
+      background: linear-gradient(155deg, #494330, #b0934a);
+      color: #1c1c1c;
+      box-shadow: inset 0 0 8px rgba(212, 175, 55, 0.5);
+    }
+
+    &:hover {
+      background: rgba(212, 175, 55, 0.2);
       color: #fff;
     }
   }
