--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,18 +1,18 @@
 .Nav {
   user-select: none;
   position: fixed;
-  top: 12px;
+  top: 15px;
   left: 30px;
   right: 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.5rem 0.8rem;
+  padding: 0.3rem 0.3rem;
 
   /* Фон как у баннера и формы */
   background: linear-gradient(155deg, #2b2b2b, #3b321c);
   backdrop-filter: blur(6px);
-  border-radius: 25px;
+  border-radius: 28px;
 
   /* Box-shadow золотой, как у баннера */
   box-shadow: 0 1px 4px 1px rgba(215, 179, 60, 0.5);
@@ -31,11 +31,10 @@
 
   .Nav_links {
     display: flex;
-    gap: 50px;
-
+    gap: 150px;
     a {
       text-decoration: none;
-      color: #fbe8a6; /* золотистый текст по общему стилю */
+      color: #e0d19c; /* золотистый текст по общему стилю */
       font-weight: 600;
       font-family: monospace;
       font-size: 1.2rem;
@@ -53,34 +52,14 @@
         bottom: -2px;
         width: 0;
         height: 2px;
-        background-color: #f1ce59; /* золотая линия под ссылкой */
+        border-radius: 2px;
+        background-color: #cbb260; /* золотая линия под ссылкой */
         transition: width 0.3s ease;
       }
 
       &:hover::after {
         width: 100%;
       }
-    }
-  }
-
-  .Nav_logout {
-    padding: 8px 16px;
-    font-size: 1rem;
-    transition:
-      transform 0.25s ease,
-      background 0.25s ease,
-      color 0.25s ease,
-      box-shadow 0.25s ease;
-
-    &:hover {
-      background: linear-gradient(
-        135deg,
-        rgba(177, 150, 62, 0.35),
-        rgba(202, 175, 23, 0.35)
-      );
-      color: black;
-      transform: translateY(-1px);
-      box-shadow: 0 1px 4px rgba(203, 170, 60, 0.5); /* как у формы/баннера */
     }
   }
 
@@ -101,8 +80,8 @@
     }
 
     .Nav_logout {
-      padding: 6px 12px;
-      font-size: 0.95rem;
+      padding: 4px 8px;
+      font-size: 0.85rem;
     }
   }
 }
