--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -9,30 +9,6 @@
   transition: all 0.25s ease;
   text-align: center;
 
-  /* Кнопка с закруглением (например, вкладки Login/Register) */
-  &.rounded {
-    width: 100%;
-    background: rgba(40, 35, 30, 0.6);
-    color: #fbe8a6;
-    padding: 10px 16px;
-    font-size: 1rem;
-    border-radius: 16px;
-
-    box-shadow: 0 1px 3px rgba(212, 175, 55, 0.5);
-    transition: all 0.3s ease;
-
-    &.active {
-      background: linear-gradient(155deg, #494330, #b0934a);
-      color: #1c1c1c;
-      box-shadow: inset 0 0 8px rgba(212, 175, 55, 0.5);
-    }
-
-    &:hover {
-      background: rgba(212, 175, 55, 0.2);
-      color: #fff;
-    }
-  }
-
   /* Основная кнопка Submit */
   &.btn--primary {
     background: linear-gradient(155deg, #2b2b2b, #3b321c);
@@ -50,10 +26,11 @@
 
   /* Вкладки Login / Register */
   &.btn--secondary {
+    padding: 10px 14px;
     background: rgba(40, 35, 30, 0.6);
     color: #fbe8a6;
-    border: 1px solid rgba(212, 175, 55, 0.4);
-    font-weight: 600;
+    box-shadow: 0 1px 1.5px 0.5px rgba(212, 175, 55, 0.6);
+    font-weight: 500;
     transition: all 0.3s ease;
 
     &.active {
