--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -11,16 +11,31 @@
 
   /* Основная кнопка Submit */
   &.btn--primary {
-    background: linear-gradient(155deg, #2b2b2b, #3b321c);
+    align-self: flex-start;
+    padding: 8px 20px;
+    box-shadow: 0 1px 1.5px 0.5px rgba(212, 175, 55, 0.6);
+    background: linear-gradient(
+      155deg,
+      #2b2b2b,
+      #3b321c
+    ); /* как баннер/форма */
+
+    border-radius: 6px;
+    font-weight: 600;
+    cursor: pointer;
     color: #fbe8a6;
-    border: 1px solid rgba(212, 175, 55, 0.5);
-    box-shadow: 0 3px 8px rgba(212, 175, 55, 0.5);
+    transition: all 0.3s ease;
 
     &:hover {
-      background: linear-gradient(145deg, #fdebb2, #f4d27b);
-      color: #1c1c1c;
+      background: linear-gradient(155deg, #3b321c, #2b2b2b);
+      color: #fff;
       transform: translateY(-1px);
-      box-shadow: 0 4px 12px rgba(212, 175, 55, 0.6);
+      box-shadow: 0 0.5px 6px 0.5px rgba(212, 175, 55, 0.6);
+    }
+
+    &:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
     }
   }
 
