--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -1,6 +1,6 @@
 .btn {
   padding: 12px 16px;
-  border-radius: 12px;
+
   border: none;
   cursor: pointer;
   font-family: monospace;
@@ -9,17 +9,12 @@
   transition: all 0.25s ease;
   text-align: center;
 
-  /* Основная кнопка Submit */
   &.btn--primary {
     align-self: flex-start;
     padding: 8px 20px;
-    margin-top: 12px;
+    margin-top: 4px;
     box-shadow: 0.5px 1px 0.5px 1px rgba(212, 175, 55, 0.6);
-    background: linear-gradient(
-      155deg,
-      #2b2b2b,
-      #3b321c
-    ); /* как баннер/форма */
+    background: linear-gradient(155deg, #2b2b2b, #3b321c);
 
     border-radius: 6px;
     font-weight: 600;
@@ -30,19 +25,18 @@
     &:hover {
       background: linear-gradient(155deg, #3b321c, #2b2b2b);
       color: #fff;
-      transform: translateY(-1px);
+      transform: translateY(-1.5px);
       box-shadow: 0 0.5px 6px 0.5px rgba(212, 175, 55, 0.6);
     }
-
     &:disabled {
       opacity: 0.6;
       cursor: not-allowed;
     }
   }
 
-  /* Вкладки Login / Register */
   &.btn--secondary {
-    padding: 10px 14px;
+    border-radius: 12px;
+    padding: 10px;
     background: rgba(40, 35, 30, 0.6);
     color: #fbe8a6;
     box-shadow: 0.5px 1px 1.5px 0.5px rgba(212, 175, 55, 0.6);
@@ -52,12 +46,14 @@
     &.active {
       background: linear-gradient(155deg, #494330, #b0934a);
       color: #1c1c1c;
-      box-shadow: inset 0 0 8px rgba(212, 175, 55, 0.5);
+      box-shadow: inset 0.5px 1px 2px 0.5px rgba(212, 175, 55, 0.5);
     }
 
     &:hover {
-      background: rgba(212, 175, 55, 0.2);
+      background: linear-gradient(155deg, #3b321c, #2b2b2b);
       color: #fff;
+      transform: translateY(-1.5px);
+      box-shadow: 0 0.5px 6px 0.5px rgba(212, 175, 55, 0.6);
     }
   }
 }
