--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -60,25 +60,25 @@
   z-index: 1;
   max-width: 500px;
   width: 90%;
-  padding: 22px;
-  border-radius: 22px;
+  padding: 20px 16px;
+  border-radius: 28px;
   background: linear-gradient(155deg, #2b2b2b, #3b321c);
-  box-shadow: 0 1px 6px 1px rgba(212, 175, 55, 0.5);
+  box-shadow: 0 1px 5px 1px rgba(212, 175, 55, 0.5);
   transition: background 0.3s ease;
 
   .AuthPage_toggle {
     display: flex;
     box-shadow: 0 1px 3px rgba(212, 175, 55, 0.5);
-    border-radius: 16px;
+    border-radius: 14px;
     overflow: hidden;
     margin-bottom: 16px;
 
     .segment {
       flex: 1;
       text-align: center;
-      padding: 10px 0;
+      padding: 10px;
       font-weight: 600;
-      font-size: 16px;
+      font-size: 14px;
       background: rgba(40, 35, 30, 0.6);
       color: #e4d291;
       cursor: pointer;
