--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,7 +1,7 @@
 /* Основной контейнер Footer */
 .Footer {
   // Главный контейнер футера
-
+  user-select: none;
   display: flex;
   // Используем flexbox для выравнивания элементов по горизонтали
 
