--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -1,4 +1,5 @@
 .AboutPage {
+  user-select: none;
   min-height: calc(100vh - 50px - 50px); // учитываем Navbar и Footer
   display: flex;
   justify-content: flex-start; // выравнивание слева
@@ -72,12 +73,10 @@
   right: 0;
   display: flex;
   flex-direction: column;
-  gap: 6px;
-  padding: 10px 16px;
-  background: rgba(15, 15, 15, 0.96);
+  gap: 2px;
+  background: rgba(25, 24, 24, 0.96);
   border-radius: 8px;
-  border: 1px solid rgba(200, 171, 78, 0.4);
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 4px 8px rgba(42, 41, 16, 0.6);
   z-index: 10;
 }
 
