--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -1,39 +1,41 @@
 .AboutPage {
   user-select: none;
-  min-height: calc(100vh - 50px - 50px);
+  min-height: calc(100vh - 50px - 90px);
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   padding: 16px;
-  margin-top: 150px;
+  margin-top: 140px;
   font-family: monospace;
-  gap: 32px;
+  gap: 18px;
   overflow: auto;
 }
 
 .AboutContainer {
+  user-select: none;
   flex: 1;
-  max-width: 820px;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
-  padding: 32px 40px;
-  background: linear-gradient(155deg, #2b2b2b, #3b321c);
+  padding: 30px 36px;
+  background: linear-gradient(155deg, #141313, #3e392d);
   border-left: 3px solid rgba(212, 175, 55, 0.6);
   border-radius: 12px;
   box-shadow: 0 1px 4px 1px rgba(212, 175, 55, 0.5);
   animation: slideIn 0.7s ease forwards;
-  gap: 25px;
+  gap: 16px;
   position: relative;
   overflow: auto;
 }
 
 /* Глобус */
 .AboutGlobeWrapper {
+  user-select: none;
   flex-basis: 50%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding-left: 50px;
+  padding-left: 60px;
   animation: slideInGlobe 1s ease forwards;
 }
 
