--- a/src/pages/contact/Contact.scss
+++ b/src/pages/contact/Contact.scss
@@ -19,7 +19,8 @@
 .ContactWrapper {
   position: fixed;
   left: 16px;
-  margin-top: 140px;
+  margin-top: 120px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   gap: 30px;
