--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -2,13 +2,13 @@
   user-select: none;
   position: fixed;
   top: 10px;
-  left: 15px;
-  right: 15px;
+  left: 10px;
+  right: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem;
-  background: linear-gradient(155deg, #141313, #3e392d);
+  background: linear-gradient(155deg, #141313, #393630);
   backdrop-filter: blur(6px);
   border-radius: 28px;
   box-shadow: 0 1px 2px 1px rgba(215, 179, 60, 0.5);
