--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -67,11 +67,11 @@
   &.btn--lang {
     width: 100%;
     padding: 6px 12px;
-    border-radius: 8px;
+    border-radius: 2px;
     background: rgba(46, 44, 44, 0.8);
     color: #fbe8a6;
     font-weight: 500;
-    text-align: left;
+    text-align: center;
     box-shadow: 1px 1px 1px rgba(212, 175, 55, 0.35);
     transition: all 0.3s ease;
 
@@ -83,7 +83,7 @@
     &.active {
       background: linear-gradient(155deg, #b0934a, #494330);
       color: #222121;
-      box-shadow: inset 0 2px 6px rgba(212, 175, 55, 0.5);
+      box-shadow: inset 0 1px 4px rgba(212, 175, 55, 0.5);
     }
   }
 }
