--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -104,7 +104,7 @@
     max-width: 1200px;
     // Ограничиваем максимальную ширину
 
-    margin: 0 auto;
+    margin: 6px auto;
     // Центрируем контейнер по горизонтали
 
     position: relative;
@@ -117,7 +117,7 @@
     display: flex;
     // Располагаем иконки в ряд
 
-    gap: 26px;
+    gap: 22px;
     // Расстояние между иконками
 
     a {
@@ -126,7 +126,7 @@
       color: #fbe8a6;
       // Цвет иконок
 
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       // Размер иконок
 
       transition:
