--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -6,10 +6,10 @@
   justify-content: center;
   margin-top: 90px;
   font-family: monospace;
-  gap: 25px;
+  gap: 35px;
   overflow-x: hidden; // ✅ фикс
   overflow-y: auto;
-  padding: 14px;
+  padding: 8px;
 }
 
 .AboutContainer {
@@ -17,11 +17,11 @@
   max-width: 900px;
   display: flex;
   flex-direction: column;
-  padding: 16px;
+  padding: 25px;
   border-radius: 12px;
   box-shadow: 0 1px 4px rgba(212, 175, 55, 0.5);
   animation: slideIn 0.7s ease forwards;
-  gap: 10px;
+  gap: 16px;
   position: relative;
   overflow: hidden;
 }
@@ -33,7 +33,7 @@
 }
 
 .AboutImage {
-  width: 180px;
+  width: 150px;
   border-radius: 6px;
   border: 1px solid #d4af37;
   opacity: 0;
@@ -66,15 +66,14 @@
 }
 
 .AboutText {
-  line-height: 1.8;
+  line-height: 1.6;
   color: #e0d7b0;
-  font-size: 1.1em;
+  font-size: 0.83rem;
   font-family: monospace;
 }
 
 /* Globe */
 .AboutGlobeWrapper {
-  flex-basis: 40;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -83,7 +82,7 @@
 
 .AboutGlobeContainer {
   position: relative;
-  width: 160px;
+  width: 120px;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   overflow: hidden;
@@ -93,7 +92,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  animation: rotateGlobe 20s linear infinite;
+  animation: rotateGlobe 30s linear infinite;
   position: relative;
   z-index: 2;
 }
